# Enhedron

./: .clang-format  CMakeLists.flags.txt  CMakeLists.txt  README.md  appveyor.yml  vagga.yaml
copyright-header/: add-header
cpp/lib/include/Enhedron/: Assertion.h  Log.h  Math.h  Util.h
cpp/lib/include/Enhedron/Assertion/: Configurable.h  Functions.h
cpp/lib/include/Enhedron/CommandLine/: Parameters.h
cpp/lib/include/Enhedron/Log/: DefaultWriter.h  Logger.h  Types.h
cpp/lib/include/Enhedron/Util/: Enum.h  Json.h  Lazy.h  MetaProgramming.h  Optional.h
cpp/test/include/Enhedron/: Test.h
cpp/test/include/Enhedron/Test/: Harness.h  Results.h  Suite.h
cpp/test/src/Test/: Assert.cpp  CommandLine.cpp  Harness.cpp  Integration.cpp  Util.cpp
cpp/test/src/Test/Examples/: AllExamples.cpp  Harness.cpp  Introductory.cpp  MinimalTest.cpp
haskell/: Build.hs  SingleInclude.hs
modules/Test/docs/source/: assertions.rst  conf.py  introduction.rst  prettyPrintingYourTypes.rst  writingTests.rst
